<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img1"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            android:layout_marginStart="40dp"/>


        <Space
            android:id="@+id/spacer1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/img1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eid"
            android:text="@string/event_id"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_below="@id/spacer1"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ename"
            android:text="@string/event_name"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_below="@id/eid"

            android:layout_marginStart="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/orgname"
            android:text="@string/organised_by"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_below="@id/ename"

            android:layout_marginStart="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/datetext"
            android:text="@string/date"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_below="@id/orgname"

            android:layout_marginStart="10dp"/>


        <Space
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@id/datetext" />



        <Button
            android:id="@+id/viewpar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/view_participants"
            android:layout_below="@id/spacer"
            android:background="@drawable/button_rounded"
            android:layout_marginStart="10dp"/>


        <Space
            android:id="@+id/spacer2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@id/viewpar"/>


        <Button
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:text="Notify"
            android:layout_below="@id/spacer2"

            android:layout_marginStart="10dp"/>


        <Space
            android:id="@+id/spacer3"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@id/edit"/>

        <Button
            android:id="@+id/delete_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:text="Scan QR Code"
            android:layout_below="@id/spacer3"

            android:layout_marginStart="10dp"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>