<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textSize="35dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:focusable="true"
                android:backgroundTint="#EDE2E2"
                android:foregroundTint="#F1E1E1"
                android:textColor="@color/black"
                android:hint="@string/name3"
                android:textColorHint="#808080"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <EditText
                android:id="@+id/em"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:focusable="true"
                android:backgroundTint="#EDE2E2"
                android:foregroundTint="#F1E1E1"
                android:ems="10"
                android:textColor="@color/black"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="#808080"
                android:autofillHints="" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <EditText
                android:id="@+id/mob"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/mobile_no"
                android:inputType="phone"
                android:importantForAutofill="no"
                android:textColorHint="#808080"
                android:textColor="@color/black"
                android:backgroundTint="#EDE2E2"
                android:foregroundTint="#F1E1E1"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/password_number"
                android:inputType="numberPassword"
                android:autofillHints=""
                android:textColorHint="#808080"
                android:textColor="@color/black"
                android:backgroundTint="#EDE2E2"
                android:foregroundTint="#F1E1E1"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <!--        <Button-->
            <!--            android:id="@+id/signup"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:background="#2276DC"-->
            <!--            android:text="@string/signup" />-->
            <Button
                android:id="@+id/signu"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginLeft="65dp"
                android:text="SIGNUP"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:background="@drawable/button_rounded"
                />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>